# lxvt

./: .gitignore  AUTHORS  CREDITS  ChangeLog  ChangeLog.old  FAQ  INSTALL  Makefile.am  NEWS  README  README.configure  TODO  bootstrap.sh  configure.ac  svn-authors.xml  svn-to-changelog.sh
doc/: LSM.in  Makefile.am  README.greek.bz2  README.menu.bz2  README.xvt.bz2  behind_mrxvt.txt.bz2  guessing_codeset.txt.bz2  hack-mrxvt.txt.bz2  lxvt.1  mrxvt.1  mrxvt_seq.txt.bz2  rxvtRef.txt.bz2  xterm-ctlseqs.txt.bz2
share/: Makefile.am  default.menu  drxvtrc  lxvtrc  lxvtrc.sample  lxvtrc.sample.dark  mrxvtrc  mrxvtrc.sample  submenus.menu
share/builds/: PKGBUILD.lxvt  mrxvt.SlackBuild  mrxvt.ebuild  mrxvt.fink.info  mrxvt.spec
share/etc/: drxvt.termcap  drxvt.terminfo  lxvt.termcap  lxvt.terminfo  mrxvt.terminfo  rxvt.terminfo
share/pixmaps/: lxvt-csh.xpm  lxvt-root.xpm  lxvt.xpm
share/rxvt_menus/: example.menu
share/scripts/: lxvtset.pl  mrxvt.vbs  mrxvtset.pl  ts4to8.pl
src/: .gitignore  Makefile.am  close_term.xbm  close_term.xpm  command.c  command.h  debug.c  debug.h  encoding.c  encoding.h  feature.h  grkelot.c  grkelot.h  init.c  init.h  left.xbm  logging.c  lxvt  macros.c  main.c  menubar.c  menubar.h  misc.c  mjpg.c  mpng.c  netdisp.c  pixmap.c  protos.h  ptytty.c  right.xbm  rxvt.c  rxvt.h  rxvtlib.h  rxvtmem.c  rxvtmem.h  screen.c  screen.c.rej  scrollbar-next.c  scrollbar-plain.c  scrollbar-rxvt.c  (+13 more)
